--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
                     <div class="post">
                         <h4><%= post.title %></h4>
                         <p><%= post.content %></p>
-                        <form action="/profile/delete/<%= post._id %>" method="POST" style="display: inline;">
+                        <form action="/profile/<%= post._id %>" method="POST" style="display: inline;">
                             <input type="hidden" name="_method" value="DELETE">
                             <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
